# IBKR_BOT

./: .env.example  .gitignore  .mypy.ini  45_21_DTE_FILES_SUMMARY.md  45_21_DTE_IMPLEMENTATION_SUMMARY.md  45_21_DTE_QUICKSTART.md  ARCHIVE_SUMMARY.md  ASSIGNMENT_MONITORING_IMPLEMENTATION_REPORT.md  ASSIGNMENT_MONITORING_QUICKSTART.md  ASSIGNMENT_RISK_ANALYSIS.md  AUTOMATED_BRACKET_ORDERS.md  BUG_FIX_PNL_CALCULATION.md  CLAUDE.md  CLIENT_ID_REFERENCE.md  CODEBASE_INVENTORY.md  COLLECTOR_AND_DELTA_FIXES.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_INTEGRATION_SUMMARY.md  CRITICAL_DATA_COLLECTION_ISSUE.md  CRITICAL_OPTION_CONFIG.md  CRITICAL_OVERNIGHT_FIX.md  DASHBOARD_UPDATES.md  DATA_COLLECTION_COMPLETE.md  DATA_COLLECTION_IMPLEMENTATION_SUMMARY.md  DATA_COLLECTION_QUICKSTART.md  DATA_COLLECTION_SYSTEM.md  DATA_DISTRIBUTION_REPORT.md  DATA_INTEGRITY_CRISIS_JAN30.md  DECISION_MATRIX_ANALYSIS.md  DEEP_REVIEW_REPORT_2026-02-03.txt  DELTA_LAKE_PARTITIONING.md  DELTA_RANGE_UPDATE_SUMMARY.md  DERIVED_STATISTICS_GUIDE.md  DERIVED_STATS_IMPLEMENTATION_SUMMARY.md  DERIVED_STATS_INTEGRATION_SUMMARY.md  DRY_RUN_VERIFICATION.md  ENHANCED_COLLECTOR_VERIFICATION.md  EXCHANGE_FIX_QUICK.md  EXECUTE_STRATEGIES_ALL_TYPES.md  FINAL_STRUCTURE.md  (+57 more)
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  agent-history.json
config/: futures_config.yaml  paper_trading.yaml.example  production.yaml.example  strategy_deltas.yaml  trading_config.yaml
docs/: BACKUP_RESTORE.md  MONITORING.md  PAPER_TRADING_SETUP.md  PRODUCTION_SETUP.md  RUNBOOK.md
scripts/: add_backfill_to_scheduler.py  (+40 more)
(+20870 files in other folders)
